add products and product page

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@My_UI*": ["./components/*"],
+      "@StaticData*": ["./static_data/*"]
     }
   }
 }
