--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@rc-component/pagination": "^1.2.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.1",
     "lucide-react": "^0.562.0",
