--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "paths": {
       "My_UI/*": ["./components/*"],
       "StaticData/*": ["./static_data/*"],
-      "lib/*": ["./utils/*"]
+      "lib/*": ["./utils/*"],
+      "Media/*": ["./media/*"]
     }
   }
 }
