fix: Correct jsconfig.json path mapping for lib/* imports
The original project stores library files in utils/ directory,
not lib/. Changed path mapping back to resolve imports correctly:
- lib/BrandContext -> utils/BrandContext
- lib/LanguageContext -> utils/LanguageContext
- lib/cart/* -> utils/cart/*
- etc.

This fixes all 41 module not found errors.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "paths": {
       "My_UI/*": ["./components/*"],
       "StaticData/*": ["./static_data/*"],
-      "lib/*": ["./lib/*"],
+      "lib/*": ["./utils/*"],
       "utils/*": ["./utils/*"],
       "Media/*": ["./media/*"]
     }
